[gd_scene format=3 uid="uid://dlsdxl67nj625"]

[ext_resource type="Script" path="res://scripts/ui/crafting_panel.gd" id="1_panel"]

[node name="CraftingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "打造系統"
horizontal_alignment = 0

[node name="CloseButton" type="Button" parent="PanelContainer/VBox/Header"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventorySide" type="VBoxContainer" parent="PanelContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InvLabel" type="Label" parent="PanelContainer/VBox/HBox/InventorySide"]
layout_mode = 2
text = "背包裝備"
horizontal_alignment = 0

[node name="InvScroll" type="ScrollContainer" parent="PanelContainer/VBox/HBox/InventorySide"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="PanelContainer/VBox/HBox/InventorySide/InvScroll"]
layout_mode = 2
columns = 8

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBox/HBox"]
layout_mode = 2

[node name="CraftingSide" type="VBoxContainer" parent="PanelContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectedLabel" type="Label" parent="PanelContainer/VBox/HBox/CraftingSide"]
layout_mode = 2
text = "未選擇裝備"
horizontal_alignment = 0

[node name="TooltipBox" type="PanelContainer" parent="PanelContainer/VBox/HBox/CraftingSide"]
layout_mode = 2
custom_minimum_size = Vector2(0, 170)

[node name="TooltipMargin" type="MarginContainer" parent="PanelContainer/VBox/HBox/CraftingSide/TooltipBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TooltipText" type="RichTextLabel" parent="PanelContainer/VBox/HBox/CraftingSide/TooltipBox/TooltipMargin"]
layout_mode = 2
bbcode_enabled = true
text = "選擇裝備以查看"
fit_content = false

[node name="MaterialButtons" type="HBoxContainer" parent="PanelContainer/VBox/HBox/CraftingSide"]
layout_mode = 2

[node name="AlterButton" type="Button" parent="PanelContainer/VBox/HBox/CraftingSide/MaterialButtons"]
layout_mode = 2
text = "改造石"

[node name="AugmentButton" type="Button" parent="PanelContainer/VBox/HBox/CraftingSide/MaterialButtons"]
layout_mode = 2
text = "增幅石"

[node name="RefineButton" type="Button" parent="PanelContainer/VBox/HBox/CraftingSide/MaterialButtons"]
layout_mode = 2
text = "精煉石"

[node name="MaterialCount" type="Label" parent="PanelContainer/VBox/HBox/CraftingSide"]
layout_mode = 2
text = "改造: 0 | 增幅: 0 | 精煉: 0"
horizontal_alignment = 0

[node name="Footer" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="PanelContainer/VBox/Footer"]
layout_mode = 2
size_flags_horizontal = 3
text = "點擊背包裝備選擇 | C/ESC 關閉"
horizontal_alignment = 0

[connection signal="pressed" from="PanelContainer/VBox/Header/CloseButton" to="." method="close"]
